apps/mon-club/wordpress/prod/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: wordpress
spec:
  virtualhost:
    fqdn: mon-club.prodv2.cedille.club
    tls:
      secretName: wordpress-tls
      minimumProtocolVersion: "1.2"
  routes:
    - conditions:
        - prefix: /
      services:
        - name: wordpress
          port: 80
      requestHeadersPolicy:
        set:
          - name: X-Forwarded-Proto
            value: https
